--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <br>
 
 
-  <a href="adverse.simdif.com" class="download">DOWNLOAD NOW</a>
+  <a href="https://www.mediafire.com/file/ibpgii3exhc2uon/Lawrence-Oyor-Alignment-Chant-EP-(CeeNaija.com).mp3/file" class="download">DOWNLOAD NOW</a>
   <br>
 <br>
   <br>
@@ -47,14 +47,14 @@
         <p id="head" >SEE ALSO</p>
         <ul>
          <li><a href="favour.com" id="try">Favour-Lawrence Oyor</a></li>
-          <li><a href="iminlove.com" id="try">I'm in love- Lawrence Oyor</a></li>
-          <li><a href="worthy.com" id="try">Worthy Of My Praise- Dusin Oyekan ft.Lawrence Oyor</a></li>
-          <li><a href="flight.com" id="try">Eagles Flight- Lawrence Oyor</a></li>
+          <li><a href="https://wa.me/2348157758023" id="try">I'm in love- Lawrence Oyor</a></li>
+          <li><a href="https://wa.me/2348157758023" id="try">Worthy Of My Praise- Dusin Oyekan ft.Lawrence Oyor</a></li>
+          <li><a href="https://wa.me/2348157758023" id="try">Eagles Flight- Lawrence Oyor</a></li>
             </ul>
              </div>
              <br>
 <br>
-<a href="www.playstore.com" class="app">
+<a href="https://wa.me/c/2348157758023" class="app">
     DOWNLOAD OUR OFFICIAL APP
 </a>
   <br>
